--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "react-router",
-  "description": "An example of React Router copied from https://reacttraining.com/react-router/web/guides/quick-start.",
+  "description":
+    "An example of React Router copied from https://reacttraining.com/react-router/web/guides/quick-start.",
   "version": "0.0.0",
   "dependencies": {
-    "react-router-dom": "4.0.0",
+    "bootstrap": "4.1.0",
+    "react": "15.4.2",
+    "react-bootstrap": "0.32.1",
     "react-dom": "15.4.2",
-    "react": "15.4.2"
+    "react-router-dom": "4.0.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.0"
